--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <meta
-        name="description"
-        content="Web site created using create-react-app"
+            name="description"
+            content="Web site created using create-react-app"
         />
+        <meta name="theme-color" content="#032535">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#032535">
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Entertainment Hub</title>
