--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,12 @@
         <meta charset="utf-8" />
         <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="theme-color" content="#000000" />
         <meta
             name="description"
             content="Web site created using create-react-app"
         />
-        <meta name="theme-color" content="#032535">
-        <meta name="apple-mobile-web-app-status-bar-style" content="#032535">
+        <meta name="theme-color" content="#cf556c">
+        <meta name="apple-mobile-web-app-status-bar-style" content="#cf556c">
         <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <title>Entertainment Hub</title>
