--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta
             name="description"
-            content="Web site created using create-react-app"
+            content="Get all the Trending Movies and TV Series Details"
         />
         <meta name="theme-color" content="#cf556c">
         <meta name="apple-mobile-web-app-status-bar-style" content="#cf556c">
